force-app/main/default/objects/CC_Config_RRSS__mdt/CC_Config_RRSS__mdt.object-meta.xml
<CustomObject>
    <label>Configuración de RRSS</label>
    <pluralLabel>Configuraciones de RRSS</pluralLabel>
</CustomObject>