force-app/main/default/objects/CC_Config_RRSS__mdt/fields/CC_CasoCanalAcceso__c.field-meta.xml
<CustomField>
    <fullName>CC_CasoCanalAcceso__c</fullName>
    <description>Canal de acceso del caso a crear</description>
    <inlineHelpText>Canal de acceso del caso a crear</inlineHelpText>
    <label>Canal acceso caso</label>
    <length>25</length>
    <type>Text</type>
</CustomField>