force-app/main/default/objects/CC_Config_RRSS__mdt/fields/CC_HorasReapertura__c.field-meta.xml
<CustomField>
    <fullName>CC_HorasReapertura__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Horas a tener en cuenta para reabrir un caso desde su cierre y la entrada de un Tweet</description>
    <inlineHelpText>Horas a tener en cuenta para reabrir un caso desde su cierre y la entrada de un Tweet</inlineHelpText>
    <label>Horas reapertura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>