force-app/main/default/objects/CC_Config_RRSS__mdt/fields/CC_Red_Social__c.field-meta.xml
<CustomField>
    <fullName>CC_Red_Social__c</fullName>
    <label>Red Social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
                <default>true</default>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>